--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,10 @@ inputs:
   commit-message:
     description: Commit message
     required: true
+  base-branch:
+    description: Target branch
+    required: false
+    default: main
   label:
     description: Labels for the PR
     required: false
@@ -55,7 +59,7 @@ runs:
           git add .
           git commit -m "${{ inputs.commit-message}}"
           git push --set-upstream origin ${{ inputs.branch-name }}
-          gh pr create -H ${{ inputs.branch-name }} -B main --title 'Update ${{ inputs.output-file }} file' --body 'Created by Github action' --label ${{ inputs.label}}
+          gh pr create -H ${{ inputs.branch-name }} -B ${{ inputs.base-branch }} --title 'Update ${{ inputs.output-file }} file' --body 'Created by Github action' --label ${{ inputs.label}}
           cd ..
           rm -rf temp
       env: 
