--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,7 @@ runs:
           git config --global user.email "${{ inputs.user-email }}"
           git config --global user.name "${{ inputs.user-name }}"
           git clone https://github.com/${{ inputs.output-repo }}.git temp
-          cp ${{ inputs.input-file }} temp/${{ inputs.output-file }}
+          cp -r ${{ inputs.input-file }} temp/${{ inputs.output-file }}
           cd temp
           git remote set-url origin https://x-access-token:${{ inputs.github-token }}@github.com/${{ inputs.output-repo }}
           git push origin --delete ${{ inputs.branch-name }} || true
