--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
         uses: ./ # Uses an action in the root directory
         with:
           target-repo: FedericoGarza/sync-repos
-          target-path: README.md
-          source-path: README.md
+          target-path: ./README.md
+          source-path: ./README.md
           branch-name: test-branch
           github-token: ${{ secrets.TOKEN_GITHUB }}
           commit-message: 'Test commit'
